@@ -15,6 +15,7 @@ Bug fixes:
 - fixed a bug where style items pasted from another theme were renamed
   after being pasted.
 - removed bare except: in Extensions/install_actionicons.py
+- fixed pageblock layout rendering in macroless mode.
 New internal features:
 ~~~~~~~~~~~~~~~~~~~~~~
 - better caching of the base url.
